# multitool

./: LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  runtests.sh  setup.py
.github/workflows/: pythonpublish.yml
multitool/: __init__.py  __main__.py  cls.py  console.py  exceptions.py  silent.py  utils.py  verbose.py
multitool/foo/: __init__.py
multitool/plugins/: commands.py
tests/: test_cat.py  test_hello.py  test_helloworld.py  test_prompt.py  test_sync.py  test_utils.py
tools/: bump_version.py
