[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multitool"
version = "0.6.0"
description = "Quickly create and distribute command-line tools."
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.7"
license = { text = "MIT" }

authors = [
  { name = "Matthew Delotavo", email = "matthew.t.delotavo@gmail.com" }
]

keywords = ["cli", "tooling", "automation"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.7"
]

dependencies = [
  "click>=8.1.3",
  "click-aliases>=1.0.1",
  "click-option-group>=0.5.5",
  "GitPython>=3.1.30"
]

[project.urls]
Homepage = "https://github.com/mdelotavo/multitool"
Repository = "https://github.com/mdelotavo/multitool"

[project.scripts]
multitool = "multitool.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["multitool*"]
